# fetch

./: CMakeLists.txt  Cargo.toml  gc.sh
include/core/: enviroment.hpp  hardware.hpp  system.hpp
include/util/: config.hpp  distro.hpp  exec.hpp  strings.hpp
src/: main.cpp  main.rs
src/core/: enviroment.cpp  enviroment.rs  hardware.cpp  hardware.rs  mod.rs  system.cpp  system.rs
src/render/: display.rs  logo.rs  mod.rs
src/util/: config.cpp  config.rs  disto.cpp  distro.rs  exec.cpp  mod.rs  strings.cpp
